mengubah about me

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- my Css -->
     <link rel="stylesheet" href="style.css" />
-    <title>My Portfolio | Kevin sutanto!</title>
+    <title>My Portfolio | Kevin sutanto</title>
   </head>
   <body id="Home">
     <!-- navbar -->
@@ -68,7 +68,7 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4">
-            <p>123456 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, distinctio libero. Deleniti omnis assumenda quae nihil, eligendi fugiat provident quos!</p>
+            <p>Nama saya kevin sutanto, saya mengambil jurusan sistem informasi di Universitas Tarumanagara.</p>
           </div>
           <div class="col-md-4">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, laborum, optio fugiat earum nemo ullam dolores officia dolore id sapiente error quibusdam, excepturi neque sed!</p>
