--- a/index.html
+++ b/index.html
@@ -9,34 +9,46 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 
     <!-- Bootstrap Icons -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" />
+    <link rel="stylesheet" href="img/Menu/android-chrome-192x192.png" />
 
-    <!-- my Css -->
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+    <!-- my CSS -->
     <link rel="stylesheet" href="style.css" />
-    <title>My Portfolio | Kevin sutanto</title>
+    <title>LIFE_AND_STOR_COFFEE</title>
   </head>
   <body id="Home">
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary shadow-sm fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Kevin sutanto</a>
+        <a class="navbar-brand" href="#">LNS</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#Home">Home</a>
+              <a class="nav-link active" aria-current="page" href="#COVER">HOME</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="#About">About</a>
+            </li> -->
+            <li class="nav-item">
+              <a class="nav-link" href="#ESPRESSOBASED">ESPESSO BASED</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#Project">Project</a>
+              <a class="nav-link" href="#MANUALBREW">MANUAL BREW</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#MILKBASED">MILK BASED</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#TEA">TEA</a>
+            </li>
+            <!-- <li class="nav-item">
               <a class="nav-link" href="#Contact">Contact</a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
@@ -44,10 +56,10 @@
     <!-- akhir navbar -->
 
     <!-- jumbotron -->
-    <section class="jumbotron text-center">
+    <!-- <section class="jumbotron text-center">
       <img src="img/foto kevin sutanto (BG red).jpg" alt="kevin sutanto" width="200" class="rounded-circle img-thumbnail" />
-      <h1 class="display-4">Kevin sutanto</h1>
-      <p class="lead">software engineer | Barista</p>
+      <h1 class="display-4"></h1>
+      <p class="lead"></p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
@@ -55,22 +67,22 @@
           d="M0,64L34.3,96C68.6,128,137,192,206,186.7C274.3,181,343,107,411,96C480,85,549,139,617,138.7C685.7,139,754,85,823,85.3C891.4,85,960,139,1029,138.7C1097.1,139,1166,85,1234,64C1302.9,43,1371,53,1406,58.7L1440,64L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"
         ></path>
       </svg>
-    </section>
+    </section> -->
     <!-- akhir jumbotron -->
 
     <!-- about -->
-    <section id="About">
-      <div class="container">
+    <!-- <section id="About">
+      <div class="container" data-aos="fade-down">
         <div class="row text-center mb-3">
           <div class="col">
             <h2>About Me</h2>
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-right" data-aos-duration="1000">
             <p>Nama saya kevin sutanto, saya mengambil jurusan sistem informasi di Universitas Tarumanagara.</p>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, laborum, optio fugiat earum nemo ullam dolores officia dolore id sapiente error quibusdam, excepturi neque sed!</p>
           </div>
         </div>
@@ -82,72 +94,143 @@
           d="M0,128L34.3,144C68.6,160,137,192,206,197.3C274.3,203,343,181,411,154.7C480,128,549,96,617,96C685.7,96,754,128,823,160C891.4,192,960,224,1029,250.7C1097.1,277,1166,299,1234,261.3C1302.9,224,1371,128,1406,80L1440,32L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"
         ></path>
       </svg>
-    </section>
+    </section> -->
     <!-- akhir about -->
 
-    <!-- projects -->
-    <section id="Project">
-      <div class="container">
-        <div class="row text-center mb-3">
-          <div class="col">
-            <h2>My Projects</h2>
+    <!-- MENU -->
+    <div class="container pb-5 bg-secondary">
+      <div class="col">
+        <div class="col" id="COVER">
+          <div class="row text-center mb-3">
+            <div class="col">
+              <h2 class="text-secondary">COVER</h2>
+            </div>
+          </div>
+          <div class="justify-content-center">
+            <a href="=">
+              <img src="img/Menu/1.jpg" alt="gambar 1" class="img-fluid gallery-img" />
+            </a>
           </div>
         </div>
-        <div class="row justify-content-center">
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <img src="img/Projects/1.jpg" class="card-img-top" alt="project 1" />
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
+        <div class="col" id="ESPRESSOBASED">
+          <div class="row text-center mb-3">
+            <div class="col">
+              <h2 class="text-secondary">ESPESSO BASED</h2>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <img src="img/Projects/2.jpg" class="card-img-top" alt="project 2" />
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
+          <div class="justify-content-center">
+            <a href="=">
+              <img src="img/Menu/2.jpg" alt="gambar 1" class="img-fluid gallery-img" />
+            </a>
+          </div>
+        </div>
+        <div class="col" id="MANUALBREW">
+          <div class="row text-center mb-3">
+            <div class="col">
+              <h2 class="text-secondary">MANUAL BREW</h2>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <img src="img/Projects/3.jpg" class="card-img-top" alt="project 3" />
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
+          <div class="justify-content-center">
+            <a href="=">
+              <img src="img/Menu/3.jpg" alt="gambar 1" class="img-fluid gallery-img" />
+            </a>
+          </div>
+        </div>
+        <div class="col" id="MILKBASED">
+          <div class="row text-center mb-3">
+            <div class="col">
+              <h2 class="text-secondary">MILK BASED</h2>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <img src="img/Projects/4.jpg" class="card-img-top" alt="project 4" />
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
+          <div class="justify-content-center">
+            <a href="=">
+              <img src="img/Menu/4.jpg" alt="gambar 1" class="img-fluid gallery-img" />
+            </a>
+          </div>
+        </div>
+        <div class="col" id="TEA">
+          <div class="row text-center mb-3">
+            <div class="col">
+              <h2 class="text-secondary">TEA</h2>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <img src="img/Projects/5.jpg" class="card-img-top" alt="project 5" />
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
-            </div>
+          <div class="justify-content-center">
+            <a href="=">
+              <img src="img/Menu/5.jpg" alt="gambar 1" class="img-fluid gallery-img" />
+            </a>
           </div>
         </div>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#ffffff"
-          fill-opacity="1"
-          d="M0,224L21.8,218.7C43.6,213,87,203,131,208C174.5,213,218,235,262,245.3C305.5,256,349,256,393,234.7C436.4,213,480,171,524,133.3C567.3,96,611,64,655,74.7C698.2,85,742,139,785,176C829.1,213,873,235,916,229.3C960,224,1004,192,1047,181.3C1090.9,171,1135,181,1178,170.7C1221.8,160,1265,128,1309,117.3C1352.7,107,1396,117,1418,122.7L1440,128L1440,320L1418.2,320C1396.4,320,1353,320,1309,320C1265.5,320,1222,320,1178,320C1134.5,320,1091,320,1047,320C1003.6,320,960,320,916,320C872.7,320,829,320,785,320C741.8,320,698,320,655,320C610.9,320,567,320,524,320C480,320,436,320,393,320C349.1,320,305,320,262,320C218.2,320,175,320,131,320C87.3,320,44,320,22,320L0,320Z"
-        ></path>
-      </svg>
-    </section>
-    <!-- akhir projects -->
+    </div>
+
+    <!-- akhir MENU -->
+
+    <!-- Gallery -->
+    <!-- <section id="gallery">
+      <div class="container">
+        <div class="row text-center mb-3">
+          <div class="col">
+            <h2>Gallery</h2>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-3">
+            <a href="img/gallery/1.jpeg">
+              <img src="img/gallery/1.jpeg" alt="gambar 1" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallery/2.jpeg" alt="gambar 2" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallery/3.jpeg" alt="gambar 3" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallery/4.jpeg" alt="gambar 4" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallery/5.jpeg" alt="gambar 5" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallery/6.jpeg" alt="gambar 6" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallery/7.jpeg" alt="gambar 7" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallery/8.jpeg" alt="gambar 8" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallery/9.jpeg" alt="gambar 9" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallery/10.jpeg" alt="gambar 10" class="img-fluid gallery-img" />
+            </a>
+          </div>
+        </div>
+      </div>
+    </section> -->
+    <!-- Akhir Gallery -->
 
     <!-- contact -->
-    <section id="Contact">
+    <!-- <section id="Contact">
       <div class="container">
         <div class="row text-center mb-3">
           <div class="colom">
@@ -189,15 +272,40 @@
           d="M0,128L60,138.7C120,149,240,171,360,165.3C480,160,600,128,720,133.3C840,139,960,181,1080,181.3C1200,181,1320,139,1380,117.3L1440,96L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"
         ></path>
       </svg>
-    </section>
+    </section> -->
     <!-- akhir contact -->
 
     <!-- footer -->
-    <footer class="bg-primary text-white text-center pb-5">
+    <footer class="bg-secondary text-white text-center pb-5">
       <p>Created with <i class="bi bi-heart-pulse-fill text-danger"></i> by <a href="https://www.instagram.com/kevinsutant/?igshid=MTg0ZDhmNDA%3D" class="text-white fw-bold">Kevin sutanto</a></p>
     </footer>
     <!-- akhir footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <!-- AOS -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      const galleryImage = document.querySelectorAll(".gallery-img");
+      galleryImage.forEach((img, i) => {
+        img.dataset.aos = "fade-down";
+        img.dataset.aosDelay = i * 100;
+        img.dataset.aosDuration = 1000;
+      });
+
+      AOS.init({
+        once: true,
+      });
+    </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/TextPlugin.min.js"></script>
+    <script>
+      gsap.registerPlugin(TextPlugin);
+      gsap.to(".display-4", { durationn: 2, text: "Kevin sutanto" });
+      gsap.to(".lead", { durationn: 3, delay: 0.5, text: "software engineer | Barista" });
+      gsap.from(".jumbotron img", { duration: 1, rotateY: 360, opacity: 0 });
+      gsap.from(".navbar", { duration: 1.5, y: "-100", opacity: 0, ease: "bounce" });
+    </script>
 
     <script>
       const scriptURL = "https://script.google.com/macros/s/AKfycbxyjHzmCe3lOl4jkR519AVwQ2U2RJoqOsTrPkjVm2-NrUKfgthoJTqgHTkc0IhdTIC2/exec";
