--- a/index.html
+++ b/index.html
@@ -96,9 +96,10 @@
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/Projects/1.jpg" class="card-img-top" alt="project 1" />
+              <img src="img/Projects/Barista-Experience/1.jpeg" class="card-img-top" alt="foto ruangan" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a class="card-text" href="Barista-Experience.html">Barista</a>
+                <p>Semasa kuliah saya mendedikasikan diri untuk belajar menyeduh kopi dan masuk kedunia kopi, begitu antusias sampai saya bisa membuat secangkir latte art.</p>
               </div>
             </div>
           </div>
