--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
             <p>Nama saya kevin sutanto, saya mengambil jurusan sistem informasi di Universitas Tarumanagara.</p>
           </div>
           <div class="col-md-4">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, laborum, optio fugiat earum nemo ullam dolores officia dolore id sapiente error quibusdam, excepturi neque sed!</p>
+            <p>
+              Saya memiliki ketertarikan di bidang teknologi terutama di dunia IT, saya tertarik dengan cara kerja sebuah sistem baik aplikasi atau sistem kerja suatu perusahaan, selain itu saya juga tertarik di dunia fotografi dan editing.
+            </p>
           </div>
         </div>
       </div>
@@ -94,44 +96,66 @@
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4 mb-3 text-center">
             <div class="card">
               <img src="img/Projects/Barista-Experience/1.jpeg" class="card-img-top" alt="foto ruangan" />
               <div class="card-body">
-                <a class="card-text" href="Barista-Experience.html">Barista</a>
+                <a class="card-text text-decoration-none fw-bold badge bg-primary text-wrap" style="width: 6rem" href="Barista-Experience.html">Barista</a>
                 <p>Semasa kuliah saya mendedikasikan diri untuk belajar menyeduh kopi dan masuk kedunia kopi, begitu antusias sampai saya bisa membuat secangkir latte art.</p>
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4 mb-3 text-center">
             <div class="card">
-              <img src="img/Projects/2.jpg" class="card-img-top" alt="project 2" />
+              <img src="img/Projects/Photography-Experience/1.jpeg" class="card-img-top" alt="foto ruangan" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a class="card-text text-decoration-none fw-bold badge bg-primary text-wrap" style="width: 6rem" href="Photography-Experience.html">Photography</a>
+                <p>Photography merupakan bagian dari aktivitas sehari-hari saya, saya suka hunting dan posting di media sosial</p>
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4 mb-3 text-center">
             <div class="card">
-              <img src="img/Projects/3.jpg" class="card-img-top" alt="project 3" />
+              <img src="img/Projects/Barista-Experience/1.jpeg" class="card-img-top" alt="foto ruangan" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a class="card-text text-decoration-none fw-bold badge bg-primary text-wrap" style="width: 6rem" href="Barista-Experience.html">2.</a>
+                <p>2.</p>
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4 mb-3 text-center">
             <div class="card">
-              <img src="img/Projects/4.jpg" class="card-img-top" alt="project 4" />
+              <img src="img/Projects/Barista-Experience/1.jpeg" class="card-img-top" alt="foto ruangan" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a class="card-text text-decoration-none fw-bold badge bg-primary text-wrap" style="width: 6rem" href="Barista-Experience.html">3.</a>
+                <p>3.</p>
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4 mb-3 text-center">
             <div class="card">
-              <img src="img/Projects/5.jpg" class="card-img-top" alt="project 5" />
+              <img src="img/Projects/Barista-Experience/1.jpeg" class="card-img-top" alt="foto ruangan" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a class="card-text text-decoration-none fw-bold badge bg-primary text-wrap" style="width: 6rem" href="Barista-Experience.html">4.</a>
+                <p>4.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3 text-center">
+            <div class="card">
+              <img src="img/Projects/Barista-Experience/1.jpeg" class="card-img-top" alt="foto ruangan" />
+              <div class="card-body">
+                <a class="card-text text-decoration-none fw-bold badge bg-primary text-wrap" style="width: 6rem" href="Barista-Experience.html">5.</a>
+                <p>5.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3 text-center">
+            <div class="card">
+              <img src="img/Projects/Barista-Experience/1.jpeg" class="card-img-top" alt="foto ruangan" />
+              <div class="card-body">
+                <a class="card-text text-decoration-none fw-bold badge bg-primary text-wrap" style="width: 6rem" href="Barista-Experience.html">6.</a>
+                <p>6.</p>
               </div>
             </div>
           </div>
