--- a/Photography-Experience.html
+++ b/Photography-Experience.html
@@ -199,20 +199,7 @@
 
     <section id="Galery-Foto">
       <h1 class="text-center">GALERY EDITING</h1>
-      <!-- Carousel wrapper -->
-      <div id="carouselMultiItemExample" class="carousel slide carousel-dark text-center" data-mdb-ride="carousel">
-        <!-- Controls -->
-        <div class="d-flex justify-content-center mb-4">
-          <button class="carousel-control-prev position-relative" type="button" data-mdb-target="#carouselMultiItemExample" data-mdb-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next position-relative" type="button" data-mdb-target="#carouselMultiItemExample" data-mdb-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-        <!-- Inner -->
+
         <div class="carousel-inner py-4">
           <!-- Single item -->
           <div class="carousel-item active">
@@ -220,22 +207,22 @@
               <div class="row">
                 <div class="col-lg-4">
                   <div class="card">
-                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/181.webp" class="card-img-top" alt="Waterfall" />
+                    <img src="img/Projects/Photography-Experience/BHR/BHR Race1.jpg" class="card-img-top" alt="Waterfall" />
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#!" class="btn btn-primary">Button</a>
+                      <h5 class="card-title">BELINYU HAPPY RUNNERS</h5>
+                      <p class="card-text">Menjadi pengurus dalam komunitas lari yang bernama Belinyu Happy Runners.</p>
+                      <a href="#!" class="btn btn-primary">See More</a>
                     </div>
                   </div>
                 </div>
 
                 <div class="col-lg-4 d-none d-lg-block">
                   <div class="card">
-                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/182.webp" class="card-img-top" alt="Sunset Over the Sea" />
+                    <img src="img/Projects/Photography-Experience/BEMFTI/FTI COMP (1).jpg" class="card-img-top" alt="Sunset Over the Sea" />
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#!" class="btn btn-primary">Button</a>
+                      <h5 class="card-title">BEM FTI</h5>
+                      <p class="card-text">Menjadi anggota Publikasi dan Dokumentasi .</p>
+                      <a href="#!" class="btn btn-primary">See More</a>
                     </div>
                   </div>
                 </div>
@@ -244,9 +231,9 @@
                   <div class="card">
                     <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/183.webp" class="card-img-top" alt="Sunset over the Sea" />
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#!" class="btn btn-primary">Button</a>
+                      <h5 class="card-title">SHIRT</h5>
+                      <p class="card-text">.Desain menjadi hobi yang sangat menyenangkan, saya suka mendesain walpaper dan baju untuk keperluan sehari-hari</p>
+                      <a href="#!" class="btn btn-primary">See More</a>
                     </div>
                   </div>
                 </div>
@@ -254,88 +241,7 @@
             </div>
           </div>
 
-          <!-- Single item -->
-          <div class="carousel-item">
-            <div class="container">
-              <div class="row">
-                <div class="col-lg-4 col-md-12">
-                  <div class="card">
-                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/184.webp" class="card-img-top" alt="Fissure in Sandstone" />
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#!" class="btn btn-primary">Button</a>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-lg-4 d-none d-lg-block">
-                  <div class="card">
-                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/185.webp" class="card-img-top" alt="Storm Clouds" />
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#!" class="btn btn-primary">Button</a>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-lg-4 d-none d-lg-block">
-                  <div class="card">
-                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/186.webp" class="card-img-top" alt="Hot Air Balloons" />
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#!" class="btn btn-primary">Button</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Single item -->
-          <div class="carousel-item">
-            <div class="container">
-              <div class="row">
-                <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-                  <div class="card">
-                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/187.webp" class="card-img-top" alt="Peaks Against the Starry Sky" />
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#!" class="btn btn-primary">Button</a>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-lg-4 mb-4 mb-lg-0 d-none d-lg-block">
-                  <div class="card">
-                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/188.webp" class="card-img-top" alt="Bridge Over Water" />
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#!" class="btn btn-primary">Button</a>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-lg-4 mb-4 mb-lg-0 d-none d-lg-block">
-                  <div class="card">
-                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/189.webp" class="card-img-top" alt="Purbeck Heritage Coast" />
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#!" class="btn btn-primary">Button</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- Inner -->
-      </div>
+          
       <!-- Carousel wrapper -->
     </section>
     <footer class="bg-secondary text-white text-center pb-5"></footer>
