--- a/Photography-Experience.html
+++ b/Photography-Experience.html
@@ -8,12 +8,12 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 
-    <title>Barista-Experience</title>
+    <title>Photographer-Experience</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-secondary shadow-sm fixed-top mb-5">
       <div class="container">
-        <a class="navbar-brand" href="#">BARISTA</a>
+        <a class="navbar-brand" href="#">PHOTOGRAPHER</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -43,11 +43,9 @@
           class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white"
           style="background-image: url('https://lh3.googleusercontent.com/p/AF1QipOvJ4qbgEF1urXQrdJMnXTSFibdHtwnc125ZQLn=s680-w680-h510'); background-size: 100% 500%"
         >
-          <h1 class="mb-3 h2">BARISTA</h1>
+          <h1 class="mb-3 h2">PHOTOGRAPHER</h1>
           <p>
-            saya kevin sutanto, berkerja sebagai barista di life and story coffee belinyu bangka, awal karir menjadi barista dimulai dari kesukaan mengonsumsi kopi kemudian belajar cupping, menyeduh sampai latte art secara otodidak melalui
-            media sosial seperti instagram dan youtube. pouring latte art adalah salah satu kesulitan saya dan memakan waktu yang lama dalam proses belajar pouring hingga menjadi bentuk sempurna dari latte art, untuk saat ini saya bisa
-            menuang beberapa pattern seperti simple love, double love, rose, swan dan tulip.
+          saya kevin sutanto, memiliki hobi dan ketertarikan di dunia fotografer, sehingga saya senang mepelajari ilmu tentang fotografer, mulai dari ilmu-ilmu dasar hingga expert, saya juga senang mempelajari editing untuk kepuasan sendiri, berikut ini adalah hasil karya saya.
           </p>
         </div>
       </div>
@@ -211,7 +209,7 @@
                     <div class="card-body">
                       <h5 class="card-title">BELINYU HAPPY RUNNERS</h5>
                       <p class="card-text">Menjadi pengurus dalam komunitas lari yang bernama Belinyu Happy Runners.</p>
-                      <a href="#!" class="btn btn-primary">See More</a>
+                      <a href="Project1-Photography.html" class="btn btn-primary">See More</a>
                     </div>
                   </div>
                 </div>
@@ -222,7 +220,7 @@
                     <div class="card-body">
                       <h5 class="card-title">BEM FTI</h5>
                       <p class="card-text">Menjadi anggota Publikasi dan Dokumentasi .</p>
-                      <a href="#!" class="btn btn-primary">See More</a>
+                      <a href="Project2-Photography.html" class="btn btn-primary">See More</a>
                     </div>
                   </div>
                 </div>
@@ -233,7 +231,7 @@
                     <div class="card-body">
                       <h5 class="card-title">SHIRT</h5>
                       <p class="card-text">.Desain menjadi hobi yang sangat menyenangkan, saya suka mendesain walpaper dan baju untuk keperluan sehari-hari</p>
-                      <a href="#!" class="btn btn-primary">See More</a>
+                      <a href="Project3-Photography.html" class="btn btn-primary">See More</a>
                     </div>
                   </div>
                 </div>
