update entrepreneur experience

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
             <div class="card">
               <img src="img/Projects/Barista-Experience/1.jpeg" class="card-img-top" alt="foto ruangan" />
               <div class="card-body">
-                <a class="card-text text-decoration-none fw-bold badge bg-primary text-wrap" style="width: 6rem" href="Barista-Experience.html">2.</a>
-                <p>2.</p>
+                <a class="card-text text-decoration-none fw-bold badge bg-primary text-wrap" style="width: 6rem" href="Entrepreneur-Experience.html">Entrepreneur</a>
+                <p>saya memulai bisnis kopi sejak tahun 2020 dan di tahun 2021 saya dapat membuka kedai kopi yang saya impikan.</p>
               </div>
             </div>
           </div>
